# fintracker-user-profile

./: .gitignore  README.md  pyproject.toml
app/api/v1/endpoints/: goals.py  post_confirmation.py  profile.py  websocket.py
app/core/: container.py
app/crud/: dynamodb_repository.py
app/services/: eventbridge_publisher.py  services.py
src/app/: goals_handler.py  post_confirmation_handler.py  profile_handler.py  websocket_handler.py
src/config/: container.py
src/domain/: models.py  ports.py  services.py
src/infrastructure/: dynamodb_repository.py  eventbridge_publisher.py
tests/unit/: test_user_profile_service.py
