[tool.poetry]
name = "user-profile-service"
version = "1.0.0"
description = "FinTracker User Profile Service — manages user identity, preferences, and real-time WebSocket connections."
authors = ["FinTracker Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34"
aws-lambda-powertools = { version = "^3.0", extras = ["tracer"] }
tenacity = "^9.0"
pydantic = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-mock = "^3.14"
moto = { version = "^5.0", extras = ["dynamodb", "events"] }
mypy = "^1.10"
ruff = "^0.4"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
